update the rest of the modules to Java 12 as well and add lombok & junit dependencies