@@ -12,6 +12,8 @@ plugins {
 
 	// Apply the application plugin to add support for building an application
 	id 'application'
+
+	id "io.freefair.lombok" version "3.7.4"
 }
 
 repositories {
@@ -20,11 +22,30 @@ repositories {
 	jcenter()
 }
 
+sourceCompatibility = JavaVersion.VERSION_12
+targetCompatibility = JavaVersion.VERSION_12
+
+
+tasks.withType(JavaCompile).each {
+	it.options.compilerArgs.add('--enable-preview')
+}
+
+tasks.test {
+	useJUnitPlatform()
+	jvmArgs("--enable-preview")
+}
+
 dependencies {
+	compile(project(":sensors"))
+
 	implementation 'com.google.firebase:firebase-admin:6.8.1'
 	implementation 'org.slf4j:slf4j-api:1.7.5'
 	implementation 'org.slf4j:slf4j-log4j12:1.7.5'
+	compileOnly 'org.projectlombok:lombok:1.18.8'
+	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 
+	testCompile("org.assertj:assertj-core:3.11.1")
+	testCompile("org.junit.jupiter:junit-jupiter-api:5.3.2")
+	testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.2")
 
-	compile(project(":sensors"))
 }
